# staroski-tcc-bcc

./: README.md  raspberry.txt  run-subst.bat.txt
Proposta/: rascunho.txt  (+1 more)
Workspace/avetanabt-20070719/: HOWTOCOMPILE  LICENSE  Makefile.in  README  avetana.vcf  configure.ac  envvariables  install  version.xml
Workspace/avetanabt-20070719/c/: BlueZ.cpp  Makefile.in
Workspace/avetanabt-20070719/c/CVS/: Entries  Repository
Workspace/avetanabt-20070719/com/sun/CVS/: Entries  Repository
Workspace/avetanabt-20070719/com/sun/cdc/CVS/: Repository
Workspace/avetanabt-20070719/com/sun/cdc/io/: ConnectionBaseInterface.java
Workspace/avetanabt-20070719/de/CVS/: Entries  Repository
Workspace/avetanabt-20070719/de/avetana/CVS/: Repository
Workspace/avetanabt-20070719/de/avetana/bluetooth/: JSRTest.java
Workspace/avetanabt-20070719/de/avetana/bluetooth/CVS/: Entries  Repository
Workspace/avetanabt-20070719/de/avetana/bluetooth/connection/: BTConnection.java  ConnectionFactory.java  ConnectionNotifier.java  Connector.java  JSR82URL.java
Workspace/avetanabt-20070719/javax/bluetooth/: BluetoothConnectionException.java  BluetoothStateException.java  DataElement.java  DeviceClass.java  DiscoveryAgent.java  DiscoveryListener.java  L2CAPConnection.java  L2CAPConnectionNotifier.java  LocalDevice.java  RemoteDevice.java  ServiceRecord.java  ServiceRegistrationException.java  UUID.java
Workspace/avetanabt-20070719/javax/microedition/CVS/: Repository
Workspace/avetanabt-20070719/javax/microedition/io/: Connection.java  Connector.java  ContentConnection.java  InputConnection.java  OutputConnection.java  StreamConnection.java  StreamConnectionNotifier.java  WrappedAvetanaIOException.java
Workspace/avetanabt-20070719/javax/obex/: Authenticator.java  ClientSession.java  HeaderSet.java  Operation.java  PasswordAuthentication.java  ResponseCodes.java  ServerRequestHandler.java  SessionNotifier.java
(+1426 files in other folders)
